# elabs-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cabal.project  config.example.json  flake.nix  scripts.debug.json
cb-remote/: Dockerrun.aws.json
contracts/: carbon-nft.json  carbon-token.json  carbon.json  marketplace.json  nft.json  oracle.json
docs/: auth.md  aws-ec2.md  aws.md  changeblock.md  dev-guide.md  docker.md  setup.md  wallet-backend.md
elabs-backend/: elabs-backend.cabal
elabs-backend/app/: Main.hs
elabs-backend/integration-test/: Main.hs  Setup.hs  privnet-tests.hs
elabs-backend/integration-test/EA/Api/: Carbon.hs  CarbonTests.hs  MintSpec.hs  MintTests.hs  WalletTests.hs
elabs-backend/integration-test/EA/Api/Orders/: BuyOrderTests.hs  ListOrderTests.hs  SellOrderTests.hs  UpdateOrderSellPriceTests.hs
elabs-backend/integration-test/EA/Test/Privnet/: OneShotMint.hs
elabs-backend/src/: EA.hs
elabs-backend/src/EA/: Api.hs  Auth.hs  CommonException.hs  EnumScripts.hs  ErrorMiddleware.hs  Helpers.hs  Internal.hs  Orphans.hs  Routes.hs  Script.hs  Wallet.hs
elabs-backend/src/EA/Api/: Carbon.hs  Enum.hs  Mint.hs  Order.hs  Tx.hs  Types.hs  Wallet.hs
elabs-backend/src/EA/Api/Order/: Exception.hs  Types.hs
elabs-backend/src/EA/Script/: Compile.hs  Enum.hs  Marketplace.hs  Oracle.hs
elabs-backend/src/EA/Tx/: OneShotMint.hs
elabs-backend/src/EA/Tx/Changeblock/: IO.hs  Marketplace.hs  MintIpfsNftCarbonToken.hs  Operation.hs  Oracle.hs
elabs-backend/src/EA/Tx/Enum/: EMint.hs  EVal.hs
elabs-backend/src/EA/Utils/: Wallet.hs
elabs-backend/src/Internal/: AdaPrice.hs  Ipfs.hs  Wallet.hs
elabs-backend/src/Internal/Ipfs/: Types.hs
elabs-backend/src/Internal/Wallet/DB/: Schema.hs  Sql.hs  Sqlite.hs  Types.hs
elabs-backend/test/: Main.hs
elabs-backend/test/EA/: OrphansSpec.hs
elabs-backend/test/EA/Internal/: WalletSpec.hs
elabs-backend/testlib/EA/Test/: Helpers.hs
elabs-backend/testlib/Test/EA/: Helpers.hs
elabs-backend/tests-privnet/: privnet-tests.hs
elabs-backend/tests-privnet/EA/Test/Privnet/: Helpers.hs  OneShotMint.hs
nix/: hix.nix
remote-mainnet/: Dockerrun.aws.json
remote-testnet/: Dockerrun.aws.json
scripts/: cleanup-node.sh  run-privnet-test.sh
swagger-ui/: index.html
