cabal-version:   3.4
name:            elabs-backend
version:         0.1.0.0
copyright:       2023 EMURGO Africa
maintainer:      eduardo@emurgo.africa
extra-doc-files: CHANGELOG.md

common opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog -O2

common profiling
  ghc-options: -prof -fprof-auto -O2

common deps
  build-depends:
    , aeson
    , aeson-pretty
    , atlas-cardano
    , base
    , bytestring
    , cardano-api
    , containers
    , http-types
    , monad-logger
    , monad-metrics
    , mtl
    , newtype
    , optics
    , plutus-ledger-api
    , ply-core
    , relude
    , serialise
    , servant-server
    , servant-swagger
    , swagger2
    , tagged
    , text
    , transformers
    , unliftio
    , vector
    , wai
    , wai-cors
    , warp

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind
    -Wredundant-constraints

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          lang, deps, opts
  hs-source-dirs:  src
  exposed-modules:
    EA
    EA.Api
    EA.Api.Mint
    EA.Api.Tx
    EA.Api.Types
    EA.Helpers
    EA.Script
    EA.Tx.OneShotMint

executable app
  import:         lang, deps, opts
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , elabs-backend
    , optparse-applicative
