cabal-version:   3.4
name:            elabs-backend
version:         0.1.0.0
copyright:       2023 EMURGO Africa
maintainer:      eduardo@emurgo.africa
extra-doc-files: CHANGELOG.md

common opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -eventlog -O2

common profiling
  ghc-options: -prof -fprof-auto -O2

common deps
  build-depends:
    , aeson
    , aeson-pretty
    , atlas-cardano
    , base
    , bytestring
    , cardano-addresses
    , cardano-api
    , containers
    , http-types
    , memory
    , monad-logger
    , monad-metrics
    , mtl
    , newtype
    , optics
    , persistent
    , persistent-sqlite
    , plutus-ledger-api
    , ply-core
    , relude
    , resource-pool
    , serialise
    , servant-server
    , servant-swagger
    , swagger2
    , tagged
    , text
    , text-class
    , time
    , transformers
    , unliftio
    , vector
    , wai
    , wai-cors
    , warp

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind
    -Wredundant-constraints

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          lang, deps, opts
  hs-source-dirs:  src
  exposed-modules:
    EA
    EA.Api
    EA.Api.Mint
    EA.Api.Tx
    EA.Api.Types
    EA.Api.Wallet
    EA.Internal
    EA.Script
    EA.Tx.OneShotMint
    EA.Wallet
    Internal.Wallet
    Internal.Wallet.DB.Schema
    Internal.Wallet.DB.Sqlite

executable app
  import:         lang, deps, opts
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , elabs-backend
    , optparse-applicative

test-suite spec
  import:             lang, deps, opts
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
    , elabs-backend
    , hspec
    , QuickCheck

  other-modules:      EA.Internal.WalletSpec
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3

executable integration-test
  import:         lang, deps, opts
  hs-source-dirs: tests-privnet
  type:           exitcode-stdio-1.0
  main-is:        privnet-tests.hs
  other-modules:
    EA.Test.Privnet.Helpers
    EA.Test.Privnet.OneShotMint

  build-depends:
    , elabs-backend
    , hspec
    , tasty
    , tasty-hunit
