cabal-version:   3.0
name:            elabs-backend
version:         0.1.0.0
copyright:       2023 EMURGO Africa
maintainer:      eduardo@emurgo.africa
extra-doc-files: CHANGELOG.md

common opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O0

common profiling
  ghc-options: -prof -fprof-auto -O2

common test-deps
  build-depends:
    , hspec
    , pretty
    , pretty-show
    , QuickCheck
    , tasty
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck
    , tasty-wai

common deps
  build-depends:
    , aeson
    , aeson-pretty
    , atlas-cardano
    , base
    , base16
    , bytestring
    , cardano-addresses
    , cardano-api
    , containers
    , directory
    , dotenv
    , filepath
    , Glob
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , lens
    , memory
    , monad-logger
    , monad-metrics
    , mtl
    , newtype
    , persistent
    , persistent-sqlite
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , random
    , relude
    , resource-pool
    , serialise
    , servant-auth-server
    , servant-client
    , servant-multipart
    , servant-multipart-client
    , servant-server
    , servant-swagger
    , swagger2
    , tagged
    , text
    , text-class
    , time
    , transformers
    , unliftio
    , vector
    , wai
    , wai-cors
    , warp

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind
    -Wredundant-constraints

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          lang, deps
  hs-source-dirs:  src
  exposed-modules:
    EA
    EA.Api
    EA.Api.Carbon
    EA.Api.Order
    EA.Api.Tx
    EA.Api.Types
    EA.Api.Wallet
    EA.Internal
    EA.Orphans
    EA.Routes
    EA.Script
    EA.Script.Marketplace
    EA.Script.Oracle
    EA.Tx.Changeblock.Marketplace
    EA.Tx.Changeblock.MintIpfsNftCarbonToken
    EA.Tx.Changeblock.Oracle
    EA.Wallet
    Internal.Ipfs
    Internal.Ipfs.Types
    Internal.Wallet
    Internal.Wallet.DB.Schema
    Internal.Wallet.DB.Sqlite

library elabs-backend-testlib
  import:          lang, deps, test-deps
  hs-source-dirs:  testlib
  exposed-modules: EA.Test.Helpers
  build-depends:   elabs-backend
  visibility:      private

executable app
  import:         lang, deps, opts
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , elabs-backend
    , optparse-applicative

test-suite spec
  import:             lang, deps, test-deps, opts
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
    , elabs-backend
    , elabs-backend-testlib

  other-modules:      EA.Internal.WalletSpec
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3

executable integration-test
  import:         lang, deps, test-deps, opts
  hs-source-dirs: integration-test
  main-is:        Main.hs
  other-modules:
    EA.Api.CarbonTests
    EA.Api.WalletTests
    Setup

  build-depends:
    , elabs-backend
    , elabs-backend-testlib
